Closes #28 #29
