# api/docs/swagger.json
@@ -123,7 +123,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_app.JoinRoomRequest"
+                            "$ref": "#/definitions/chords_com_api_internal_entity.JoinRoomRequest"
                         }
                     }
                 ],
@@ -161,6 +161,70 @@
                 }
             }
         },
+        "/api/rooms/{id}": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update the state of a room.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rooms"
+                ],
+                "summary": "Update a room",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Room Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chords_com_api_internal_entity.UpdateRoomRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Room updated successfully",
+                        "schema": {
+                            "$ref": "#/definitions/chords_com_api_internal_entity.Room"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/rooms/{id}/leave": {
             "post": {
                 "security": [
@@ -181,7 +245,7 @@
                 "summary": "Leave a room",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Room ID",
                         "name": "id",
                         "in": "path",
@@ -200,12 +264,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Room Not Found",
                         "schema": {
                             "type": "string"
                         }
@@ -260,6 +318,14 @@
         }
     },
     "definitions": {
+        "chords_com_api_internal_entity.JoinRoomRequest": {
+            "type": "object",
+            "properties": {
+                "room_code": {
+                    "type": "string"
+                }
+            }
+        },
         "chords_com_api_internal_entity.Room": {
             "type": "object",
             "properties": {
@@ -283,6 +349,7 @@
                 "ownerID": {
                     "type": "integer"
                 },
+                "state": {},
                 "updated_at": {
                     "type": "string"
                 },
@@ -292,6 +359,12 @@
                         "$ref": "#/definitions/chords_com_api_internal_entity.User"
                     }
                 }
+            }
+        },
+        "chords_com_api_internal_entity.UpdateRoomRequest": {
+            "type": "object",
+            "properties": {
+                "state": {}
             }
         },
         "chords_com_api_internal_entity.User": {
@@ -360,14 +433,6 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
-                }
-            }
-        },
-        "internal_app.JoinRoomRequest": {
-            "type": "object",
-            "properties": {
-                "room_code": {
-                    "type": "string"
                 }
             }
         },
