# api/internal/app/router.go
@@ -53,6 +53,7 @@ func NewHttpRouter(a *App) *chi.Mux {
 
 				r.Post("/rooms", a.CreateRoom)
 				r.Post("/rooms/join", a.JoinRoom)
+				r.Patch("/rooms/{id}", a.UpdateRoom)
 				r.Post("/rooms/{id}/leave", a.LeaveRoom)
 			})
 		})
